Adjusted text on explanation, overflow protection to prevent lopsided display

--- a/FFTCalculatorProject/styles.css
+++ b/FFTCalculatorProject/styles.css
@@ -233,6 +233,11 @@ button:hover {
         max-width: 100%;
     }
 
+    html, 
+    body {
+        overflow-x: hidden;
+
+    }
     
     html {
         scroll-behavior: smooth;
